# trusted-agent-hub

./: .gitattributes
apps/api/: alembic.ini  pyproject.toml  run.py
apps/api/src/: auth.py  database.py  dependencies.py  errors.py  main.py  models.py  settings.py
apps/api/src/migrations/: __init__.py  __main__.py  env.py
apps/api/src/migrations/versions/: 20260716_0001_consumer_persistence.py  __init__.py
apps/api/src/models/: __init__.py  common.py  feedback.py  install.py  packages.py
apps/api/src/repositories/: __init__.py  base.py  mock.py  orm.py  producer_sqlalchemy.py  sqlalchemy.py
apps/api/src/routers/: auth.py  feedback.py  install.py  packages.py  producer.py  review.py  stats.py  trust.py  trust_scores.py
apps/api/src/scripts/: __init__.py  export_openapi.py  seed_producer.py
apps/api/src/services/: __init__.py  errors.py  feedback.py  install.py  packages.py  producer.py
apps/api/tests/: conftest.py  test_database_schema.py  test_errors.py  test_feedback_contract.py  test_install_contract.py  test_openapi_contract.py  test_packages_contract.py  test_repository.py  test_runtime_dependencies.py  test_sqlalchemy_persistence.py  test_state_machine.py  test_trust_stats_contract.py
apps/api/tests/fixtures/mock/: packages.json
apps/api/tests/fixtures/mock/versions/: code-review-skill-1.0.0.json  demo-filesystem-1.0.0.json  dev-toolkit-plugin-1.3.0.json  docker-deploy-command-1.0.0.json  git-helper-skill-1.0.0.json  postgres-explorer-2.1.0.json  risky-executor-0.1.0.json  web-scraper-mcp-1.2.0.json
apps/cli/: package-lock.json  package.json
apps/cli/src/: api-client.ts  cli.ts  confirm.ts  content-integrity.ts  format.ts  grade-gate.ts  install-executor.ts  local-install-inspector.ts  local-install-store.ts  manifest-types.ts  mock-loader.ts  safe-output.ts  uninstall-executor.ts  update-executor.ts  verify-executor.ts  version-policy.ts
apps/cli/tests/: api-client.test.ts  cli-parsing.test.ts  cli-uninstall.test.ts  cli-update.test.ts  cli-verify.test.ts  confirm.test.ts  content-integrity.test.ts  grade-gate.test.ts  (+8 more)
apps/web/: package-lock.json  package.json
docs/: Trusted Agent Hub 双人实习分工文档.md
scanners/risk_scanner/: common.py  llm_reviewer.py  patterns.py  scanner.py  weights.py
scripts/: insert_test_data.py  reseed_test_data.py
(+53 files in other folders)
