[project]
name = "trusted-agent-hub-api"
version = "0.1.0"
description = "TrustedAgentHub Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
filterwarnings = [
    "error::pydantic.warnings.PydanticDeprecatedSince20",
]
