[project]
name = "trusted-agent-hub-api"
version = "0.2.0"
description = "TrustedAgentHub Backend API"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "bcrypt>=4.0,<5.0",
    "fastapi>=0.115.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.0,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
"src.migrations" = ["script.py.mako"]

[tool.pytest.ini_options]
filterwarnings = [
    "error::pydantic.warnings.PydanticDeprecatedSince20",
]
